# cqlite

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: pre-commit  setup.sh
src/: ast.rs  btree.rs  error.rs  format.rs  functions.rs  journal.rs  lib.rs  main.rs  pager.rs  parser.rs  planner.rs  record.rs  schema.rs  tokenizer.rs  types.rs  varint.rs  vm.rs
tests/: integration.rs  sqllogictest_runner.rs
tests/sqllogictest/: basic.test
